# tempo_real_analytics

./: .gitignore  README.md  extract.py  main.py  pyproject.toml
tempo_real/: Consolidado.csv  Consolidado.xlsx  Dockerfile  extract.py  final_tempo_real.xlsx  main.py  pyproject.toml  transform.py
tempo_real/tempo_real/: Consolidado.csv  Consolidado.xlsx  final_tempo_real.xlsx  load.py  transform.py
